<resources>
    <string name="app_name">FivePlusViews</string>
    <string name="user_name_hint">Enter User Name</string>
    <string name="user_password_hint">Enter Password</string>
    <string name="button_summit">Summit</string>
    <string name="login_prompt"></string>
    <string name="login_successful_info">Login Successfully!</string>
    <string name="empty_username_info">Please Enter User Name!</string>
    <string name="empty_password_info">Please Enter Password!</string>
    <string name="cb_show_password">show password</string>
    <string name="cb_hide_password">hide password</string>
</resources>